--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
-    "start":"nodemon --inspect server.js",
+    "start": "nodemon --inspect src/server.js",
+    "watch":"node-sass --watch src/resource/scss/app.scss src/public/css/app.css",
     "test": "echo \"Error: no test specified\" && exit 1"
-   
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6"
   },
   "devDependencies": {
+    "morgan": "^1.10.0",
+    "node-sass": "^7.0.3",
     "nodemon": "^2.0.19"
   }
 }
